modif pour accélération du code